@@ -1,0 +1,33 @@
+#!/bin/sh
+# Begin $rc_base/init.d/random
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+# Random script elements by Larry Lawrence
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+	start)
+		echo "Initializing kernel random number generator..."
+		if [ -f /var/tmp/random-seed ]; then
+			cat /var/tmp/random-seed >/dev/urandom
+		fi
+		dd if=/dev/urandom of=/var/tmp/random-seed count=1 &>/dev/null
+		evaluate_retval
+		;;
+                
+	stop)
+		echo "Saving random seed..."
+		dd if=/dev/urandom of=/var/tmp/random-seed count=1 &>/dev/null
+		evaluate_retval
+		;;
+
+	*)
+		echo "Usage: $0 {start|stop}"
+		exit 1
+		;;
+esac
+
+# End $rc_base/init.d/random
